--- a/src/Presentation/SoftLine.Trebol.WebUI/Components/Pages/Home.razor
+++ b/src/Presentation/SoftLine.Trebol.WebUI/Components/Pages/Home.razor
@@ -1,7 +1,93 @@
 ﻿@page "/"
+@using SoftLine.Trebol.Application.Features.Pucs.Commands.CreatePucs
+@using SoftLine.Trebol.Domain
+@inject HttpClient Http
 
-<PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<div>
+    <h2>Formulario Pucs</h2>
+    <form id="pucsForm" >
+        <div class="form-group">
+            <label for="nombreCorto">Nombre Corto</label>
+            <input type="text" class="form-control" id="nombreCorto" name="nombreCorto" @bind="NombreCorto" required>
+        </div>
+        <div class="form-group">
+            <label for="cuenta">Cuenta</label>
+            <input type="number" class="form-control" id="cuenta" name="cuenta" @bind="Cuenta" required>
+        </div>
+        <div class="form-group">
+            <label for="nombre">Nombre</label>
+            <input type="text" class="form-control" id="nombre" name="nombre" @bind="Nombre" required>
+        </div>
+        <div class="form-group">
+            <label for="tipo">Tipo</label>
+            <input type="text" class="form-control" id="tipo" name="tipo" @bind="Tipo" required>
+        </div>
+        <div class="form-group">
+            <label for="codTributario">Código Tributario</label>
+            <input type="number" class="form-control" id="codTributario" name="codTributario" @bind="CodTributario" required>
+        </div>
+        <div class="form-group">
+            <label for="digitable">Digitable</label>
+            <input type="text" class="form-control" id="digitable" name="digitable" @bind="Digitable" required>
+        </div>
+        <button @onclick="EnviarFormulario" style="margin-top: 8px" type="submit" class="btn btn-primary">Enviar</button>
+    </form>
+</div>
 
-Welcome to your new app.
+
+
+
+@code{
+    [Inject]
+    private HttpClient HttpClient { get; set; }
+
+    private string NombreCorto { get; set; }
+    private int Cuenta { get; set; }
+    private string Nombre { get; set; }
+    private string Tipo { get; set; }
+    private int CodTributario { get; set; }
+    private string Digitable { get; set; }
+
+    private async Task EnviarFormulario()
+    {
+        try
+        {
+            Console.WriteLine($"Nombre Corto: {NombreCorto}");
+            Console.WriteLine($"Cuenta: {Cuenta}");
+            Console.WriteLine($"Nombre: {Nombre}");
+            Console.WriteLine($"Tipo: {Tipo}");
+            Console.WriteLine($"Código Tributario: {CodTributario}");
+            Console.WriteLine($"Digitable: {Digitable}");
+
+            var command = new CreatePucsCommand
+                {
+                    NombreCorto = NombreCorto,
+                    Cuenta = Cuenta,
+                    Nombre = Nombre,
+                    Tipo = Tipo,
+                    CodTributario = CodTributario,
+                    Digitable = Digitable
+                };
+
+            var result = await Http.PostAsJsonAsync("api/Pucs/create", command);
+
+            if (result.IsSuccessStatusCode)
+            {
+               
+                // NavigationManager.NavigateTo("/pagina-de-exito");
+            }
+            else
+            {
+                
+                var errorMessage = await result.Content.ReadAsStringAsync();
+                
+                Console.WriteLine(errorMessage);
+            }
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine($"Error al enviar formulario: {ex.Message}");
+        }
+    }
+}
