--- a/src/Presentation/SoftLine.Trebol.WebUI/Components/Layout/NavMenu.razor
+++ b/src/Presentation/SoftLine.Trebol.WebUI/Components/Layout/NavMenu.razor
@@ -15,15 +15,20 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
+
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="thirdparty">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> thirdparty
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="puc">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> puc
+                </NavLink>
+            </div>
         </div>
     </nav>
 </div>
